# uni-basic-python-database

./: .gitignore  LICENSE  README.md  README.txt  config.py  main.py  main_gui.py  operation.py  pyproject.toml  seed.sql
controller/: main_controller.py  operation_user.py  operations_catalog.py
model/: cli_operation.py  db.py  operation.py  operation_user.py
view/: cli.py  gui.py
