[project]
name = "database-application-python"
version = "0.1.0"
description = "A basic Python application demonstrating database interaction using SQLAlchemy, built for database course at UniBo."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Alessandro Gardini", email = "alessandro.gardini7@studio.unibo.it" }
]
license = { file = "LICENCE" }
dependencies = [
    "cryptography>=45.0.3",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
