[project]
name = "database-application-python"
version = "0.1.0"
description = "A basic Python application demonstrating database interaction using SQLAlchemy, built for database course at UniBo."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Alessandro Gardini", email = "alessandro.gardini7@studio.unibo.it" }
]
license = { file = "LICENCE" }
dependencies = [
    "cryptography>=45.0.3",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
